--- a/photographer.html
+++ b/photographer.html
@@ -13,7 +13,17 @@
     </header>
     <main id="main">
       <div class="photograph-header">
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+        <div class="photograph-header_presentation">
+          <h2 id="identity_photographer"></h2>
+          <div>
+            <p id="location_photographer" class="p_city"></p>
+            <p id="tag_photographer"></p>
+          </div>
+        </div>
+        <div>
+          <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+        </div>
+        <img src="#" alt ="photo photographer" id="photo_photographer" class="photo_photographer">
       </div>
     </main>
     <div id="contact_modal">
@@ -22,16 +32,29 @@
           <h2>Contactez-moi</h2>
           <img src="assets/icons/close.svg" alt="close_icon" onclick="closeModal()" />
         </header>
-				<form>
-					<div>
-						<label>Prénom</label>
-						<input />
+				<form name="contact_form" action='index.html' method='get' onsubmit="return validate(event);" >
+					<div class='formData'>
+						<label for="first">Prénom</label><br>
+                <input class="text-control" type="text" id="first" name="first"/><br>
 					</div>
-          <button class="contact_button">Envoyer</button>
+          <div class="formData">
+            <label for="last">Nom</label><br>
+            <input class="text-control" type="text" id="last" name="last" /><br>
+          </div>
+          <div class="formData">
+            <label for="email">E-mail</label><br>
+            <input class="text-control" type="email" id="email" name="email"/><br>
+          </div>
+          <div class="formData">
+            <label for="message">Votre message</label><br>
+            <input class="text-control" type="text" id="message" name="message"/><br>
+          </div>
+          <button class="contact_button" type='submit'>Envoyer</button>
 				</form>
 			</div>
 		</div>
     <script src="scripts/utils/dataProvider.js"></script>
+    <script src="scripts/factories/photographer.js"></script>
     <script src="scripts/pages/photographer.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
   </body>
