--- a/photographer.html
+++ b/photographer.html
@@ -32,11 +32,16 @@
           <div id="sort-wrapper">
               <p class="tri-btn">Popularité</p>
               <span class="fas fa-chevron-down arrow-open"></span>
+              <select id='select-tri'>
+                <option value='popularite'>Popularité</option>
+                <option value='date'>Date</option>
+                <option value='titre'>Titre</option>
+              </select>
               <ul class="menu-tri">
-                  <li>Popularité <span class="fas fa-chevron-up arrow-close"></span>
+                  <li class='popularity-sort'>Popularité <span class="fas fa-chevron-up arrow-close"></span>
                   </li>
-                  <li>Date</li>
-                  <li>Titre</li>
+                  <li class='date-sort'>Date</li>
+                  <li class='title-sort'>Titre</li>
               </ul>
           </div>
         </div>
