--- a/photographer.html
+++ b/photographer.html
@@ -29,20 +29,22 @@
       <div class="photograph-media">
         <div class="photograph-media__tri">
           <p>Trier par</p>
-          <div id="sort-wrapper">
+          <!-- <div id="sort-wrapper">
               <p class="tri-btn">Popularité</p>
-              <span class="fas fa-chevron-down arrow-open"></span>
-              <select id='select-tri'>
-                <option value='popularite'>Popularité</option>
-                <option value='date'>Date</option>
-                <option value='titre'>Titre</option>
-              </select>
-              <ul class="menu-tri">
-                  <li class='popularity-sort'>Popularité <span class="fas fa-chevron-up arrow-close"></span>
-                  </li>
-                  <li class='date-sort'>Date</li>
-                  <li class='title-sort'>Titre</li>
-              </ul>
+              <span class="fas fa-chevron-down arrow-open"></span> -->
+          <div class='custom-select'>
+            <select id='select-tri'>
+              <option value='popularite'>Popularité</option>
+              <option value='date'>Date</option>
+              <option value='titre'>Titre</option>
+            </select>
+              <!-- <ul class="menu-tri">
+                 <li class='popularity-sort'>Popularité <span class="fas fa-chevron-up arrow-close"></span>
+                </li>
+                <li class='date-sort'>Date</li>
+                <li class='title-sort'>Titre</li>
+              </ul> 
+            </div>-->
           </div>
         </div>
         <div class="photograph-media__photos">
@@ -94,5 +96,6 @@
     <script src="scripts/factories/media.js"></script>
     <script src="scripts/pages/photographer.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
+    <!-- <script src="/scripts/utils/select.js"></script> -->
   </body>
 </html>
