--- a/photographer.html
+++ b/photographer.html
@@ -34,6 +34,7 @@
               <span class="fas fa-chevron-down arrow-open"></span> -->
           <div class='custom-select'>
             <select id='select-tri'>
+              <option value='select'>Catégorie</option>
               <option value='popularite'>Popularité</option>
               <option value='date'>Date</option>
               <option value='titre'>Titre</option>
@@ -96,6 +97,6 @@
     <script src="scripts/factories/media.js"></script>
     <script src="scripts/pages/photographer.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
-    <!-- <script src="/scripts/utils/select.js"></script> -->
+    <script src="/scripts/utils/select.js"></script>
   </body>
 </html>
