Mise à jour du total des likes

--- a/photographer.html
+++ b/photographer.html
@@ -51,7 +51,13 @@
         <div class="photograph-media__photos">
 
         </div>
-
+        <div class='boxLikesAndPrice'>
+          <div class='boxLikesAndPrice__div'>
+            <i class='fa fa-heart'></i>
+            <p class='boxLikesAndPrice__likes'></p>
+          </div>
+          <p class='boxLikesAndPrice__price'></p>
+        </div>
       </div>
     </main>
     <div id="contact_modal">
