--- a/photographer.html
+++ b/photographer.html
@@ -34,7 +34,7 @@
               <span class="fas fa-chevron-down arrow-open"></span> -->
           <div class='custom-select'>
             <select id='select-tri'>
-              <option value='select'>Catégorie</option>
+              <!-- <option value='select'>Catégorie</option> -->
               <option value='popularite'>Popularité</option>
               <option value='date'>Date</option>
               <option value='titre'>Titre</option>
@@ -59,6 +59,17 @@
           <p class='boxLikesAndPrice__price'></p>
         </div>
       </div>
+
+      <!-- The Modal/Lightbox -->
+      <div id="myLightbox" class="lightbox">
+        
+        <div class="lightbox-content">
+          <i class="close-lightbox fas fa-times" onclick="closeLightbox()" ></i>
+        </div>
+      </div>
+
+
+
     </main>
     <div id="contact_modal">
 			<div class="modal">
@@ -103,6 +114,7 @@
     <script src="scripts/factories/media.js"></script>
     <script src="scripts/pages/photographer.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
-    <script src="/scripts/utils/select.js"></script>
+    <!-- <script src="/scripts/utils/select.js"></script> -->
+    <script src="/scripts/utils/lightbox.js"></script>
   </body>
 </html>
