--- a/photographer.html
+++ b/photographer.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <header>
-      <img src="assets/images/logo.png" alt="logo" class="logo" />
+      <a href="index.html">
+        <img src="assets/images/logo.png" alt="logo" class="logo" />
+      </a>
     </header>
     <main id="main">
       <div class="photograph-header">
@@ -114,7 +116,6 @@
     <script src="scripts/factories/media.js"></script>
     <script src="scripts/pages/photographer.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
-    <!-- <script src="/scripts/utils/select.js"></script> -->
     <script src="/scripts/utils/lightbox.js"></script>
   </body>
 </html>
