Navigation clavier coeur

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
         <a href="#">
-        <img src="assets/images/logo.png" class="logo" alt="logo site web"/></a>
+        <img src="assets/images/logo.png" class="logo" alt="Fisheye"/></a>
         <h1>Nos photographes</h1>
     </header>
     <main id="main">
