--- a/photographer.html
+++ b/photographer.html
@@ -65,8 +65,10 @@
       <!-- The Modal/Lightbox -->
       <div id="myLightbox" class="lightbox">
         
-        <div class="lightbox-content">
-          <i class="close-lightbox fas fa-times" onclick="closeLightbox()" ></i>
+        <div class="lightbox-content" tabindex=0>
+          <a href="#" class='close-lightbox' onclick="closeLightbox()">
+            <i class="fas fa-times"></i>
+          </a>
         </div>
       </div>
 
