Correction accessibilité bannière

--- a/photographer.html
+++ b/photographer.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <a href="index.html">
-        <img src="assets/images/logo.png" alt="logo" class="logo" />
+        <img src="assets/images/logo.png" alt="Fisheye Home Page" class="logo" />
       </a>
     </header>
     <main id="main">
@@ -26,7 +26,7 @@
         <div>
           <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
         </div>
-        <img src="#" alt ="photo photographer" id="photo_photographer" class="photo_photographer">
+        <img src="#" alt ="" id="photo_photographer" class="photo_photographer">
       </div>
       <div class="photograph-media">
         <div class="photograph-media__tri">
