--- a/photographer.html
+++ b/photographer.html
@@ -55,7 +55,7 @@
       <div id="myLightbox" class="lightbox">
         
         <div class="lightbox-content" tabindex=0>
-          <a href="#" class='close-lightbox' onclick="closeLightbox()">
+          <a href="#" class='close-lightbox' aria-label="fermer apperçu" onclick="closeLightbox()">
             <i class="fas fa-times"></i>
           </a>
         </div>
